# nirscan_driver

./: CMakeLists.txt  README.md  package.xml
src/: nirscan_spec_server.cpp  spec_libssh.c  spec_libssh.h
